# Grz_Lab_inf

./: Cmakelists.txt  README.md  vcpkg.json
06.03.2025_task/: CMakeLists.txt  main.cpp
13_03_2025_task/: Cmakelists.txt  Main.cpp
14.11.2024_struct_operators/: Cmakelists.txt
2024.10.18_szablonCMake/: Cmakelists.txt  Main.cpp
2025_01_23/sci/: base.hpp
22_05_2025_task/: Cmakelists.txt  Main.cpp
25.10.2024_cpp/: Cmakelists.txt
27_03_2025_task/: Cmakelists.txt  Main.cpp
28.11.2024_Task/: Main.cpp
funkcje_matematyczne/: Cmakelists.txt  Main.cpp
sci_app_dll_first/: Cmakelists.txt
sci_app_dll_second/: Cmakelists.txt
sci_dynamic/: Cmakelists.txt  api.hpp  math.cpp  math.hpp
sci_sfml/: CMakeLists.txt  main.cpp
